# pet_alert

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  entrypoint_worker.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: petalert-workflow.yml  petalert-workflow.yml.backup
config/: .env.example
infra/: .env_example  Dockerfile  SSL_info.txt  docker-compose-prod.yml  docker-compose.yml  entrypoint_server.sh  entrypoint_worker.sh  first_run.env  nginx.conf  nginx_first_run.conf
infra/nginx/: bot.conf  bot_include.conf  nginx.conf  nginx_first_run.conf  nginx_first_run.template  nginx_pet_alert.conf  nginx_pet_alert.template
pet_alert/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
pet_alert/ads/: admin.py  constants.py  filters.py  forms.py  models.py  urls.py  views.py
pet_alert/ads/migrations/: 0001_initial.py  0002_add_types.py  0002_auto_20230504_0739.py  0002_lost_name.py  0003_animaltype_alter_found_condition_found_type_and_more.py  0003_auto_20220912_1618.py  0003_dialog_message_remove_found_coords_and_more.py  0003_found_open_lost_open.py  0004_alter_animaltype_icon.py  0004_alter_animaltype_id_alter_found_id_alter_lost_id.py  0004_auto_20220913_1633.py  0005_animaltype_default_image.py  0005_auto_20220922_1527.py  0005_message.py  0006_alter_message_options_and_more.py  0006_auto_20220922_2213.py  0007_dialog_message_dialog.py  0008_found_ads_found_active_cd0f83_idx_and_more.py  0009_message_recipient_checked_idx.py  0010_remove_found_coords_remove_lost_coords_and_more.py  0011_found_ads_found_active_3e61a8_idx_and_more.py
pet_alert/ads/tests/: fixtures.py  test_forms.py  test_urls.py  test_views.py
pet_alert/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
pet_alert/api/tests/: fixtures.py  test_view.py
pet_alert/core/context_processors/: year.py
pet_alert/core/templatetags/: js.py  user_filters.py  yamaps.py
pet_alert/pet_alert/: .env_example  settings.py  urls.py  wsgi.py
pet_alert/static/css/: chat-history.css  main-page.css  pa-styles.css
pet_alert/static/img/: logo.png_bak
pet_alert/static/js/: ajax_ui.js  fetch_ui.js  map_event.js  map_mark.js  map_marks.js
pet_alert/templates/: base.html
pet_alert/templates/ads/: ad_detail.html  add_found.html  add_lost.html  add_success.html  add_success_reg.html  found.html  found_detail.html  found_map.html  index.html  lost.html  lost_detail.html  lost_map.html  my_ads.html  profile.html
pet_alert/templates/core/: 403.html  403csrf.html  404.html  500.html
pet_alert/templates/includes/: footer.html  header.html
pet_alert/templates/users/: activation_complete.html  activation_email_body.txt  activation_failed.html  login.html  password_reset_complete.html  password_reset_form.html  password_set_confirm.html  password_set_done.html  registration_closed.html  signup.html
pet_alert/users/: admin.py  forms.py  models.py  urls.py  views.py
pet_alert/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name.py  0002_alter_user_first_name_alter_user_last_name.py  0003_alter_user_managers_remove_user_username_and_more.py  0004_alter_user_email_alter_user_first_name.py
server/: celery.py  urls.py  wsgi.py
server/apps/ads/: admin.py  apps.py  choices.py  constants.py  filters.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
server/apps/api/: apps.py  filters.py  permissions.py  serializers.py  views.py
server/apps/core/: apps.py  forms.py  serializers.py
server/apps/notifications/: apps.py
server/apps/user_profile/: apps.py  forms.py  urls.py  views.py
server/apps/users/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
server/settings/: __init__.py
server/settings/components/: caches.py  celery.py  common.py  cors.py  csp.py  drf.py  email.py  logging.py  sentry.py  third_party_apis.py
server/settings/environments/: development.py  production.py
server/static/css/: chat-history.css  main-page.css  pa-styles.css
server/static/js/: fetch_ui.js  map_event.js  map_marks.js
server/templates/: base.html
server/templates/ads/: ad_detail.html  add_found.html  add_lost.html  add_success.html  advertisement_detail.html  advertisement_list.html  advertisement_map.html  index.html  map.html  my_ads.html
server/templates/core/: 403.html  403csrf.html
src/pet_alert/: Dockerfile  manage.py  requirements.txt
src/pet_alert/ads/: admin.py  (+10 more)
(+164 files in other folders)
