[tool.poetry]
name = "pet-alert"
version = "1.0.0"
description = "A web application that allows people to search for missing animals and report those found"
authors = ["Ilya Malashenko (github: melax08)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.9"
django-filter = "23.5"
django-phonenumber-field = "7.3.0"
django-recaptcha = "3.0.0"
django-registration = "3.3"
gunicorn = "21.2.0"
phonenumberslite = "8.13.29"
pillow = "10.2.0"
psycopg2-binary = "2.9.9"
python-dotenv = "0.21.1"
sorl-thumbnail = "12.10.0"
djangorestframework = "3.14.0"
djoser = "2.2.2"
djangorestframework-simplejwt = "5.3.1"
django-debug-toolbar = "4.2.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-telegram-bot = "^20.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.11.0"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
