[tool.poetry]
name = "pet-alert"
version = "1.1.0"
description = "A web application that allows people to search for missing animals and report those found"
authors = ["Ilya Malashenko (github: melax08)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
phonenumberslite = "^8.13.29"
psycopg2-binary = "^2.9.9"
sorl-thumbnail = "^12.10.0"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.3.6"
redis = "^5.0.1"
setuptools = "^75.8.2"
django = "^5.1.6"
django-filter = "^25.1"
django-phonenumber-field = "^8.0.0"
python-telegram-bot = "^21.11.1"
pillow = "^11.1.0"
gunicorn = "^23.0.0"
django-registration = "^5.1.0"
django-recaptcha = "^4.0.0"
django-split-settings = "^1.3.2"
python-decouple = "^3.8"
django-http-referrer-policy = "^1.1.1"
django-permissions-policy = "^4.25.0"
django-redis = "^5.4.0"
django-structlog = "^9.0.1"
sentry-sdk = {extras = ["django"], version = "^2.22.0"}
django-celery-results = "^2.5.1"
django-csp = "^3.8"
django-cors-headers = "^4.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
django-debug-toolbar = "^5.0.1"
django-querycount = "^0.8.3"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
ruff = "^0.9.9"
django-test-migrations = "^1.4.0"
django-extra-checks = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM"  # flake8-simplify
]

[tool.ruff.format]
line-ending = "lf"
